push to update changes

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -137,7 +137,7 @@
                 </div>
             </section>
             <div class="numbvisits">
-                Number of days since last visit: <span id="visits"></span>
+                <p id="vst">Number of days since last visit: <span id="visits"></span></p>
             </div>
         </main>
         <footer>
