--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -24,16 +24,16 @@
                 <section id="logo">
                     <div id="site-logo">
                         <a href="index.html"><img src="./images/greenfingers.webp" alt="Image of Green'Fingers'logo"></a>
+                        <h1 id="site-name">Green'Fingers<br>Chamber</h1>
                     </div>
-                    <h1 id="site-name">Green'Fingers<br>Chamber</h1> 
-                <!-- /section> 
-                <section id="navigation"> -->
+                </section> 
+                <section id="navigation"> 
                     <nav> 
                         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                         <ul id="primaryNav">
-                            <li><a href="index.html">Home</a></li>
+                            <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="discover.html">Discover</a></li>
-                            <li class="active"><a href="directory.html">Directory</a></li>
+                            <li><a href="directory.html">Directory</a></li>
                             <li><a href="join.html">Join</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
@@ -43,11 +43,9 @@
                         <a id="in" href="https://linkedin.com/"><img src="./images/linkedin.png" alt="Linkedin logo"></a>
                     </div>
                 </section> 
-                <div class="banner"></div>
             </div>
-          
+            <div class="banner"></div>
             <div class="date"></div>
-            
         </header>
         <main id="busdirectory">
             <h4>Green'Fingers Directory</h4>
