--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,15 +24,15 @@
                 <section id="logo">
                     <div id="site-logo">
                         <a href="index.html"><img src="./images/greenfingers.webp" alt="Image of Green'Fingers'logo"></a>
+                        <h1 id="site-name">Green'Fingers<br>Chamber</h1>
                     </div>
-                    <h1 id="site-name">Green'Fingers<br>Chamber</h1> 
-                <!-- /section> 
-                <section id="navigation"> -->
+                </section> 
+                <section id="navigation"> 
                     <nav> 
                         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                         <ul id="primaryNav">
-                            <li><a href="index.html">Home</a></li>
-                            <li class="active"><a href="discover.html">Discover</a></li>
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="discover.html">Discover</a></li>
                             <li><a href="directory.html">Directory</a></li>
                             <li><a href="join.html">Join</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
@@ -43,19 +43,18 @@
                         <a id="in" href="https://linkedin.com/"><img src="./images/linkedin.png" alt="Linkedin logo"></a>
                     </div>
                 </section> 
-                <div class="banner"></div>
             </div>
-            <div class="date"></div> 
-            
+            <div class="banner"></div>
+            <div class="date"></div>
         </header>
         <main>
-            <h2 class="card">Discover The District of Ambohidratrimo</h2>
+            <h2 class="card">Discover the District of Ambohidratrimo</h2>
             <div id="district">
                 <p>Ambohidratrimo is one of the districts of Antananarivo, the capital of Madagascar. It is a booming area with impressive places to discover. 
                     Considered a rural district, it is located 15 km north west of the capital. 
                     GreenFinger's aims to promote the district where the chamber's office is currently based.</p>
             </div>
-            <section>
+            <section class="places">
                 <div id="airport">
                     <img src="images/placeholder.png" data-src="images/airport.jpg" alt="Madagascar International Airport">
                     <h3>Ravinala Airport</h3>
@@ -82,11 +81,10 @@
                 <div id="croc">
                     <img src="images/placeholder.png" data-src="images/crocfarm.jpg" alt="Croc farm, animals">
                     <h3>Croc Farm</h3>
-                    <p>The zoological and botanical park Croc Farm can be found in a small valley following a bumpy 10-minute car ride from Ivato Airport. 
-                        It is one of the most visited private parks in Madagascar. Not only can visitors observe crocodiles, 
-                        but also some 80 animal species and various plants and flowers from Madagascar. 
-                        Trained guides will show visitors the smallest chameleon in the world, free-living Sifaka lemurs, fossa, snakes, frogs, parrots and turtoises etc.. 
-                        Hundreds of crocodiles can be seen lazing in the sun at the shores of a lake.</p>
+                    <p>Croc Farm is a zoological and botanical park located in a small valley following a bumpy 10-minute drive from Ivato Airport. 
+                        Visitors can observe more than 80 animal species and endemic plants and flowers. 
+                        The smallest chameleon in the world, free-living Sifaka lemurs, fossa, snakes, frogs, parrots and turtoises,
+                         as well as hundreds of crocodiles can be seen at the park.</p>
                 </div>
                 <div id="foodretailing">
                     <img src="images/placeholder.png" data-src="images/lahutte.jpg" alt="La hutte canadienne food retailing and farm">
@@ -120,7 +118,6 @@
                     <div class="content1">
                         <h3>The Mining Business Center</h3>
                         <p>Mining Business Center is located on the main road of Ivato airport. 
-                            The project area is approximately 2000 square meters. 
                             The multi-faceted design concept of the exterior wall comes from the diamond itself, known as the diamond curtain wall. 
                             The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
                     </div>
