--- a/chamber/join.html
+++ b/chamber/join.html
@@ -24,10 +24,10 @@
                 <section id="logo">
                     <div id="site-logo">
                         <a href="index.html"><img src="./images/greenfingers.webp" alt="Image of Green'Fingers'logo"></a>
+                        <h1 id="site-name">Green'Fingers<br>Chamber</h1>
                     </div>
-                    <h1 id="site-name">Green'Fingers<br>Chamber</h1> 
-                <!-- /section> 
-                <section id="navigation"> -->
+                </section> 
+                <section id="navigation"> 
                     <nav> 
                         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                         <ul id="primaryNav">
@@ -36,7 +36,6 @@
                             <li><a href="directory.html">Directory</a></li>
                             <li class="active"><a href="join.html">Join</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
-                            
                         </ul>
                     </nav>
                     <div class="social">
@@ -44,102 +43,103 @@
                         <a id="in" href="https://linkedin.com/"><img src="./images/linkedin.png" alt="Linkedin logo"></a>
                     </div>
                 </section> 
-                <div class="banner"></div>
             </div>
+            <div class="banner"></div>
             <div class="date"></div>
         </header>
-        <main>
+        <main id="join">
             <h4 class="mbpersonal">Join Green'Fingers Chamber: Fill in the Form</h4>
             <form method="get" action="thankyou.html">
-                <fieldset>
+                <fieldset id="mbinfo">
                     <legend>Personal Information</legend>
                     <label class="field">First Name* <input type="text" name="fname" placeholder="First Name" required></label>
                     <label class="field">Last Name* <input type="text" name="lname" placeholder="Last Name" required></label>
-                    <label class="field">Business Position <input type="text" name="business" pattern="^[A-zÀ-ž\s\-]{7,}$"placeholder="Title"></label>
                     <label class="field">Email Address* <input type="email" name="email" placeholder="user@email.org" required></label>
                     <label class="field">Phone Number*<input type="tel" name="phone" placeholder="xxx xx xxx xx" pattern="^[0-9\+\s]{10,17}$" required></label>
-                    <label class="field">Business Name*<input type="text" name="busname" placeholder="" required></label>
                 </fieldset>
-                <fieldset>
-                    <legend>Membership Information</legend>
-                    <div id="membershiplevel">
-                        <div class="benefit">
-                        </div>
-                        <div>
-                            <label class="mbr "for="membership">Membership Level:</label>
-                            <select name="membership" id="membership-select">
-                                <option value=""disabled selected>--Please choose an option--</option>
-                                <option id="fr" value="free">NP Membership</option>
-                                <option id="bro" value="bronze">Bronze Membership</option>
-                                <option id="sil" value="silver">Silver Membership</option>
-                                <option id="gol" value="gold">Gold Membership</option>
-                            </select>
-                            <section id="npmember">
-                                <div><h5>NP Member Benefits</h5>
-                                    <p>Membership Annual Fee: Free*</p>
-                                    <ul>
-                                        <li>Business listed on Chamber Website & annual Print magazine/directory</li>
-                                        <li>Monthly e-Newsletter</li>
-                                        <li>Eligibility to host a Chamber mixer</li>
-                                        <li>One registration to Chamber Launch</li>
-                                        <li>Access to local business information</li>
-                                        <li>Free Ribbon Cutting and Open House Events (by request)</li>
-                                    </ul>
-                                </div>
-                            </section>
-                            <section id="brmember">
-                                <div><h5>Bronze Member Benefits</h5>
-                                    <p>Membership Annual Fee: 195 000 MGA</p>
-                                    <ul>
-                                        <li>Business listed on Chamber Website & annual Print magazine/directory</li>
-                                        <li>Monthly e-Newsletter</li>
-                                        <li>Eligibility to host a Chamber mixer</li>
-                                        <li>One registration to Chamber Launch</li>
-                                        <li>Access to local business information</li>
-                                        <li>Access to other organizations locally or internationally affiliated to the chamber of commerce</li>
-                                        <li>Invitations to Green'Fingers programs including training and workshops</li>
-                                        <li>Free Ribbon Cutting and Open House Events (by request)</li>
-                                        <li>Mailing List Access</li>
-                                    </ul>
-                                </div>
-                            </section>
-                            <section id="silmember">
-                                <div><h5>Silver Member Benefits</h5>
-                                    <p>Membership Annual Fee: 295 000 MGA</p>
-                                    <ul>
-                                        <li>All of Bronze members benefits</li>
-                                        <li>Facebook share of your business page (once annually)</li>
-                                        <li>Facebook share your business events (unlimited)</li>
-                                        <li>Discounts on Events</li>
-                                        <li>Business Referrals</li>
-                                        <li>Sponsorship and Promotional Opportunities</li>
-                                        <li>Invitations to Green'Fingers programs including training and workshops</li>
-                                    </ul>
-                                </div>
-                            </section>
-                            <section  id="golmember">
-                                <div><h5>Gold Member Benefits</h5>
-                                    <p>Membership Annual Fee: 395 000 MGA</p>
-                                    <ul>
-                                        <li>All of Silver members benefits</li>
-                                        <li>Access to information on local economic development opportunities</li>
-                                        <li>50% off Advertising with the Green'Fingers Chamber</li>
-                                        <li>120 Days of Banner Ad space</li>
-                                        <li>Participation in our Member Spotlight of the Week program</li>
-                                        <li>Sponsorship and Promotional Opportunities</li>
-                                        <li>Invitations to Green'Fingers programs including training and workshops</li>
-                                    </ul>
-                                </div>
-                            </section>
-                        </div>
-                </fieldset>
-                <fieldset>
+                <fieldset id="mblevel">
                     <legend>Business Information</legend>
+                        <label class="field">Business Name*<input type="text" name="busname" placeholder="" required></label>
+                        <label class="field">Business Position <input type="text" name="business" pattern="^[A-zÀ-ž\s\-]{7,}$"placeholder="Title"></label>
+                        <div id="membershiplevel">
+                            <div class="benefit">
+                                <label class="mbr "for="membership">Membership Level:</label>
+                                <select name="membership" id="membership-select">
+                                    <option value=""disabled selected>--Please choose an option--</option>
+                                    <option id="fr" value="free">NP Membership</option>
+                                    <option id="bro" value="bronze">Bronze Membership</option>
+                                    <option id="sil" value="silver">Silver Membership</option>
+                                    <option id="gol" value="gold">Gold Membership</option>
+                                </select>
+                            </div>
                         <label class="field">Business Description <textarea name="description" rows="4" cols="50"></textarea></label>
                 </fieldset>
-                <input type="submit" value="Join Green's Fingers" class="submitBtn"> 
+                <input type="hidden" id="join-time" name="registertime" value="currentTime"/>
+                <input type="hidden" id="join-date" name="registerdate" value="currentDate"/>
+                <input type="submit" value="Join the Chamber" class="submitBtn"> 
             </form>
-       </main>
+            <aside id="join-benefits">
+                <h4>Membership Benefits</h4>
+                <div id="bnfts">
+                    <section class="benefit">
+                        <div><h5>NP Member Benefits</h5>
+                            <p>Membership Annual Fee:<br> Free*</p>
+                            <ul>
+                                <li>Business listed on Chamber Website & annual Print magazine/directory</li>
+                                <li>Monthly e-Newsletter</li>
+                                <li>Eligibility to host a Chamber mixer</li>
+                                <li>One registration to Chamber Launch</li>
+                                <li>Access to local business information</li>
+                                <li>Free Ribbon Cutting and Open House Events (by request)</li>
+                                <li>Access to selected local organizations.</li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="benefit">
+                        <div><h5>Bronze Member Benefits</h5>
+                            <p>Membership Annual Fee:<br>195 000 MGA</p>
+                            <ul>
+                                <li>All of Non-Profit members benefits.</li>
+                                <li>Access to other organizations locally or internationally affiliated to the chamber of commerce</li>
+                                <li>Invitations to Green'Fingers programs including training and workshops</li>
+                                <li>Facebook share of your business page (once annually)</li>
+                                <li>Facebook share your business events (limited)</li>
+                                <li>Discounts on selected Events</li>
+                                <li>Mailing List Access</li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="benefit">
+                        <div><h5>Silver Member Benefits</h5>
+                            <p>Membership Annual Fee:<br> 295 000 MGA</p>
+                            <ul>
+                                <li>All of Bronze members benefits</li>
+                                <li>Facebook share of your business page (twice annually)</li>
+                                <li>Facebook share your business events (unlimited)</li>
+                                <li>Discounts on all Events</li>
+                                <li>Business Referrals</li>
+                                <li>Sponsorship and Promotional Opportunities</li>
+                                <li>Invitations to Green'Fingers programs including training and workshops</li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section  class="benefit">
+                        <div><h5>Gold Member Benefits</h5>
+                            <p>Membership Annual Fee:<br> 395 000 MGA</p>
+                            <ul>
+                                <li>All of Silver members benefits</li>
+                                <li>Access to information on local economic development opportunities</li>
+                                <li>50% off Advertising with the Green'Fingers Chamber</li>
+                                <li>120 Days of Banner Ad space</li>
+                                <li>Participation in our Member Spotlight of the Week program</li>
+                                <li>Sponsorship and Promotional Opportunities</li>
+                                <li>Invitations to Green'Fingers programs including training and workshops</li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+            </aside>
+        </main>
         <footer>
             <div class="address-contact">
                 <div id="site-logo-footer">
