--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="WDD230: Home Page for Green'Fingers Chamber">
-        <title>Green'Fingers Chamber Home Page</title>
+        <meta name="description" content="WDD230: Directory Page for Green'Fingers Chamber">
+        <title>Green'Fingers Directory Page</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
