--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="WDD230: Join Page for Green'Fingers Chamber">
-        <title>Green'Fingers Chamber Join Page</title>
+        <meta name="description" content="WDD230: Thank You Page for Green'Fingers Chamber">
+        <title>Green'Fingers Chamber Thank you Page</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
