html validation: all errors fixed

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,9 +58,9 @@
             <div class="release">
                 <h4>News release</h4>
                 <ul>
-                    <a href="https://www.cci.mg/fr/?p=actualite&t=actualite-eco#"><li>Relaunching the agricultural sector</li></a>
-                    <a href="https://www.lactualite.mg/economie/12346-mvola-giz-un-revenu-mensuel-pour-les-paysans-professionnels/"><li>MVOLA - GIZ: A monthly income for professional farmers</li></a>
-                    <a href="https://www.lactualite.mg/economie/7995-agriculture-un-complexe-de-laboratoire-au-fofifa/"><li>A new laboratory complex at Fofifa</li></a>
+                    <li><a href="https://www.cci.mg/fr/?p=actualite&t=actualite-eco#">Relaunching the agricultural sector</a></li>
+                    <li><a href="https://www.lactualite.mg/economie/12346-mvola-giz-un-revenu-mensuel-pour-les-paysans-professionnels/">MVOLA - GIZ: A monthly income for professional farmers</a></li>
+                    <li><a href="https://www.lactualite.mg/economie/7995-agriculture-un-complexe-de-laboratoire-au-fofifa/">A new laboratory complex at Fofifa</a></li>
                 </ul>
             </div>
             <div class="event">
@@ -74,7 +74,7 @@
                 <h4>Weather</h4>
                 <div class="wea">
                     <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
-                    <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" />  <figcaption></figcaption></figure>      
+                    <span id="icon-src"></span><figure><figcaption></figcaption></figure>      
                     <hr>
                 
                     <p>Wind Speed: <span id="speed">15</span> km/h</p>
