--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,7 +74,7 @@
                 <h4>Weather</h4>
                 <div class="wea">
                     <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
-                    <span id="icon-src"></span><figure><figcaption></figcaption></figure>      
+                    <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
                     <hr>
                 
                     <p>Wind Speed: <span id="speed">15</span> km/h</p>
